--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "shared-orm-library": "file:../libs/shared-orm-library",
+    "shared-orm-library": "git+https://github.com/ivtidai/shared-orm-library.git",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
